--- a/viz/Cargo.toml
+++ b/viz/Cargo.toml
@@ -6,5 +6,6 @@ authors = ["Andrew Palmer <andrew.pa@outlook.com>"]
 [dependencies]
 runic = { git = "https://github.com/andrew-pa/runic" }
 winit = "0.8"
+zip = "0.2"
 futures = "0.1"
 futures-cpupool = "0.1"
