--- a/viz/Cargo.toml
+++ b/viz/Cargo.toml
@@ -4,8 +4,8 @@ version = "0.1.0"
 authors = ["Andrew Palmer <andrew.pa@outlook.com>"]
 
 [dependencies]
-runic = { git = "https://github.com/andrew-pa/runic" }
-winit = "0.8"
+runic = {path = "../../runic" } #{ git = "https://github.com/andrew-pa/runic" }
+winit = "0.11"
 zip = "0.2"
 futures = "0.1"
 futures-cpupool = "0.1"
