--- a/viz/Cargo.toml
+++ b/viz/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 authors = ["Andrew Palmer <andrew.pa@outlook.com>"]
 
 [dependencies]
-runic = {path = "../../runic" } #{ git = "https://github.com/andrew-pa/runic" }
+runic = { git = "https://github.com/andrew-pa/runic" }
 winit = "0.11"
 zip = "0.2"
 futures = "0.1"
